updated event template and hover menu:last child spacing fix

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -59,11 +59,15 @@ h1 {
   font-size: 1.4rem;
 }
 
-.article-heading {
+h1.article-heading {
   font-size: 2.25rem;
   padding: 1rem 0;
   border: 1px solid black;
   border-width: 1px 0;
+}
+
+.h2 {
+  font-size: 1.25rem;
 }
 
 b,
@@ -248,4 +252,16 @@ footer ul {
 footer a {
   color: white;
   text-decoration: none;
+}
+
+figure {
+  margin: 0;
+}
+
+figure .gatsby-image-wrapper {
+  margin-bottom: 1em;
+}
+
+figcaption {
+  margin-top: -0.5rem;
 }
